fixed color schema on dark mode skins for links

--- a/resources/assets/less/skins/skin-red-dark.less
+++ b/resources/assets/less/skins/skin-red-dark.less
@@ -153,7 +153,7 @@ body {
 }
 .box-body, .box-footer, .box-header {
   background-color: var(--back-sub);
-  color: var(--text-main);
+  color: var(--header);
 }
 .btn-default{
   background-color: var(--back-main);
@@ -310,13 +310,12 @@ input[type=text], input[type=search] {
 a {
   color: var(--link);
   &:link {
-    color: var(--link);
-  }
+    color: var(--header)  }
   &:hover {
     color: var(--light-link);
   }
   &:visited {
-    color: var(--link);
+    color: var(--header)
   }
 }
 
